--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -19,8 +19,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -31,8 +35,12 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=libs/jcalendar-1.4.jar
 file.reference.jcommon-1.0.0.jar=libs/jcommon-1.0.0.jar
+file.reference.jcommon-1.0.0.jar-1=..\\..\\..\\Desktop\\jcommon-1.0.0.jar
+file.reference.jfreechart-1.0.1.jar=..\\..\\..\\Desktop\\jfreechart-1.0.1.jar
 file.reference.jfreechart-1.5.0.jar=libs/jfreechart-1.5.0.jar
+file.reference.jfreechart-1.5.0.jar-1=..\\..\\..\\Desktop\\jfreechart-1.5.0.jar
 file.reference.mysql-connector-j-9.2.0.jar=../../../Downloads/mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-1=D:\\Dowloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,10 +48,16 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.0.jar}:\
-    ${file.reference.jfreechart-1.5.0.jar}
+    ${file.reference.jfreechart-1.5.0.jar}:\
+    ${file.reference.jcommon-1.0.0.jar-1}:\
+    ${file.reference.jfreechart-1.0.1.jar}:\
+    ${file.reference.jfreechart-1.5.0.jar-1}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -51,6 +65,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -76,9 +92,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
