--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,19 +29,17 @@ dist.jar=${dist.dir}/QuanLyHocVien.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-collections4-4.4.jar=libs/commons-collections4-4.4.jar
-file.reference.commons-compress-1.21.jar=libs/commons-compress-1.21.jar
+file.reference.commons-codec-1.11.jar=libs/commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=libs/commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=libs/commons-compress-1.18.jar
 file.reference.jcalendar-1.4.jar=libs/jcalendar-1.4.jar
 file.reference.jcommon-1.0.0.jar=libs/jcommon-1.0.0.jar
 file.reference.jfreechart-1.5.0.jar=libs/jfreechart-1.5.0.jar
-file.reference.log4j-api-2.17.1.jar=libs/log4j-api-2.17.1.jar
-file.reference.log4j-core-2.17.1.jar=libs/log4j-core-2.17.1.jar
 file.reference.mysql-connector-j-9.2.0.jar=../../../Downloads/mysql-connector-j-9.2.0.jar
-file.reference.poi-5.4.1.jar=libs/poi-5.4.1.jar
-file.reference.poi-ooxml-5.4.1.jar=libs/poi-ooxml-5.4.1.jar
-file.reference.poi-ooxml-lite-5.4.1.jar=libs/poi-ooxml-lite-5.4.1.jar
-file.reference.poi-scratchpad-3.0.1-FINAL.jar=libs/poi-scratchpad-3.0.1-FINAL.jar
-file.reference.xmlbeans-5.1.1.jar=libs/xmlbeans-5.1.1.jar
+file.reference.poi-4.0.1.jar=libs/poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=libs/poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=libs/poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=libs/xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -50,15 +48,13 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.0.jar}:\
     ${file.reference.jfreechart-1.5.0.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-compress-1.21.jar}:\
-    ${file.reference.log4j-api-2.17.1.jar}:\
-    ${file.reference.log4j-core-2.17.1.jar}:\
-    ${file.reference.poi-5.4.1.jar}:\
-    ${file.reference.poi-ooxml-5.4.1.jar}:\
-    ${file.reference.poi-ooxml-lite-5.4.1.jar}:\
-    ${file.reference.poi-scratchpad-3.0.1-FINAL.jar}:\
-    ${file.reference.xmlbeans-5.1.1.jar}
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
