--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,9 @@ dist.jar=${dist.dir}/QuanLyHocVien.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.11.jar=D:\\Dowloads\\poi_chaytot\\thuvienpoi\\commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=D:\\Dowloads\\poi_chaytot\\thuvienpoi\\commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=D:\\Dowloads\\poi_chaytot\\thuvienpoi\\commons-compress-1.18.jar
 file.reference.jcalendar-1.4.jar=libs/jcalendar-1.4.jar
 file.reference.jcommon-1.0.0.jar=libs/jcommon-1.0.0.jar
 file.reference.jcommon-1.0.0.jar-1=..\\..\\..\\Desktop\\jcommon-1.0.0.jar
@@ -41,6 +44,10 @@ file.reference.jfreechart-1.5.0.jar=libs/jfreechart-1.5.0.jar
 file.reference.jfreechart-1.5.0.jar-1=..\\..\\..\\Desktop\\jfreechart-1.5.0.jar
 file.reference.mysql-connector-j-9.2.0.jar=../../../Downloads/mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.2.0.jar-1=D:\\Dowloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
+file.reference.poi-4.0.1.jar=D:\\Dowloads\\poi_chaytot\\thuvienpoi\\poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=D:\\Dowloads\\poi_chaytot\\thuvienpoi\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=D:\\Dowloads\\poi_chaytot\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=D:\\Dowloads\\poi_chaytot\\thuvienpoi\\xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -52,7 +59,14 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.0.jar-1}:\
     ${file.reference.jfreechart-1.0.1.jar}:\
     ${file.reference.jfreechart-1.5.0.jar-1}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar-1}
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
